--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <div class="grid">
     <div class="header"></div>
     <div class="content"></div>
+    <div class="content"></div>
+    <div class="content"></div>
+    <div class="content"></div>
+    <div class="content"></div>
     <div class="nav"></div>
     <div class="footer"></div>
   </div>
