--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Grid</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles.css">
-  <title>Grid</title>
-</head>
-
-<body>
-  <div class="grid">
-    <div class="header"></div>
-    <div class="content"></div>
-    <div class="content"></div>
-    <div class="content"></div>
-    <div class="content"></div>
-    <div class="content"></div>
-    <div class="nav"></div>
-    <div class="footer"></div>
-  </div>
-</body></html>
+  <body>
+    <div class="grid">
+      <div class="header"></div>
+      <div class="content"></div>
+      <div class="nav"></div>
+      <div class="footer"></div>
+    </div>
+  </body>
+</html>
