--- a/index.html
+++ b/index.html
@@ -7,21 +7,9 @@
   </head>
 
   <body>
-    auto-fill
     <div class="grid">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
-    </div>
-    auto-fit
-    <div class="grid">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
+      <div class="item">This is a very long text</div>
+      <div class="item">This is a very long text</div>
     </div>
   </body>
 </html>
