--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
   </head>
 
   <body>
-    <div class="grid">
+    <div class="grid1">
       <div class="item">This is a very long text</div>
+      <div class="item">This is a very long longer longer text</div>
+      <div class="item">This is a text</div>
+      <div class="item">
+        Not long at all, or maybe, who knows? Maybe you know, love you.
+      </div>
+      <div class="item">This is a very longer long text</div>
+    </div>
+    <div class="grid1">
       <div class="item">This is a very long text</div>
+      <div class="item">This is a very long longer longer text</div>
+      <div class="item">This is a text</div>
+      <div class="item">
+        Not long at all, or maybe, who knows? Maybe you know, love you.
+      </div>
+      <div class="item">This is a very longer long text</div>
     </div>
   </body>
 </html>
